--- a/src/Components/Message.css
+++ b/src/Components/Message.css
@@ -1,25 +1,28 @@
 .message-wrapper {
     display: flex;
     flex-direction: row;
-    width: 600px;
-    height: 90px;
-    border: 2px solid #DEE8E9;
+    width: 60%;
+    border: 3px solid #DEE8E9;
     margin: 10px;
 }
 
 .name {
     align-self: center;
-    padding-left: 20px;
-    width: 200px;
+    padding-left: 5%;
+    flex: 3;
     font-family: "Gill Sans";
     font-size: 20px;
+    color: dimgray;
 }
 
 .message {
     background-color: #DEE8E9;
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
     padding: 20px;
+    flex: 7;
+    height: 100%;
 }
 
 .message-text {
@@ -30,17 +33,15 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 250px;
     padding-right: 15px;
 }
 
 .message-btn {
     color: white;
     background-color: #FF6E01;
-    width: 80px;
-    height: 35px;
     align-self: center;
     font-family: "Gill Sans";
     font-size: 16px;
     border-radius: 5px;
+    padding: 8px 16px 8px 16px;
 }
