--- a/src/Screens/SignUp.css
+++ b/src/Screens/SignUp.css
@@ -8,6 +8,7 @@
     color: #59C0BF;
     font-weight: bold;
     margin-bottom: 0px;
+    text-align: center;
 }
 
 .sub-header {
@@ -17,17 +18,17 @@
 .input {
     border: 1px solid #B4B4B4;
     border-radius: 5px;
-    width: 30em;
-    height: 3em;
-    margin: 1em;
+    width: 50%;
+    padding: 15px;
+    margin: 10px;
 }
 
 .signup-btn {
     background-color: #48B5BA;
     color: white;
+    width: 30%;
+    padding: 12px;
     font-size: 15px;
-    width: 20em;
-    height: 3em;
     margin-top: 10px;
     border-radius: 3px;
 }
