--- a/src/Components/Message.css
+++ b/src/Components/Message.css
@@ -1,17 +1,17 @@
 .message-wrapper {
     display: flex;
-    flex-direction: row;
-    width: 60%;
-    border: 3px solid #DEE8E9;
+    flex-direction: column;
+    width: 80%;
+    border: 2px solid #DEE8E9;
     margin: 10px;
+    font-family: "Gill Sans";
 }
 
 .name {
     align-self: center;
-    padding-left: 5%;
+    padding: 15px;
     flex: 3;
-    font-family: "Gill Sans";
-    font-size: 20px;
+    font-size: 15px;
     color: dimgray;
 }
 
@@ -19,29 +19,51 @@
     background-color: #DEE8E9;
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
-    padding: 20px;
+    flex-direction: column;
+    padding: 20px 20px 10px 20px;
     flex: 7;
-    height: 100%;
 }
 
 .message-text {
-    align-self: flex-start;
-    font-family: "Gill Sans";
-    font-size: 13px;
+    padding: 5px;
+    text-align: center;
+    font-size: 12px;
     display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    padding-right: 15px;
 }
 
 .message-btn {
     color: white;
     background-color: #FF6E01;
     align-self: center;
-    font-family: "Gill Sans";
-    font-size: 16px;
+    font-size: 12px;
     border-radius: 5px;
     padding: 8px 16px 8px 16px;
+}
+
+@media (min-width: 520px) {
+    .message-wrapper {
+        flex-direction: row;
+        width: 60%;
+    }
+    .name {
+        padding-left: 10px;
+        font-size: 20px;
+    }
+    .message {
+        flex-direction: row;
+        padding: 20px;
+        width: 100px;
+    }
+    .message-text {
+        align-self: flex-start;
+        font-size: 13px;
+        padding-right: 15px;
+    }
+    .message-btn {
+        font-size: 16px;
+        font-family: "Gill Sans";
+    }
 }
